# rusty-figlet

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md  THIRD_PARTY.md  deny.toml
.github/workflows/: capture-strict-compat-corpus.yml  ci.yml  release.yml
assets/fonts/: README.md  banner.flf  big.flf  block.flf  bubble.flf  digital.flf  future.tlf  lean.flf  mini.flf  mono9.tlf  pagga.tlf  script.flf  shadow.flf  slant.flf  small.flf  standard.flf
benches/: html_escape.rs
completions/: _rusty-figlet  rusty-figlet.bash  rusty-figlet.fish  rusty-figlet.ps1
docs/: COMPATIBILITY.md  DESIGN.md  ci-runtime-baseline.md  feature-layout.md  perf-baseline.md  phase12-validation.md  phase2-validation.md  public-api-diff-baseline.md  publish-verification.md  quality-bar-v0.2.0.md  strict-compat-corpus-capture.md  tlf-derivation.md
docs/publish-verification/: flip-metal-flip.irc  hello-gay.irc  hello-world-gay.html  hi-gay.html  hi-gay.irc  irc-gay-border.irc  metal-html.html  metal.irc  mirror-metal-flip.html  plain-nothing.irc  rust-gay.html  v030-gay-border.html
examples/: gen_synthetic_corpus.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: filter_chain_parse.rs  html_escape.rs  tlf_parser.rs
scripts/: capture-toilet-corpus.sh
src/: cli.rs  color.rs  color_depth.rs  error.rs  figfont.rs  filter.rs  header.rs  layout.rs  lib.rs  main.rs  mode.rs  output.rs  smush.rs  strict.rs  strict_toilet.rs  tlf.rs  width.rs
src/export/: common.rs  html.rs  irc.rs  mod.rs  svg.rs
tests/: SC_COVERAGE.md  background_integration.rs  color_depth_integration.rs  color_isolation.rs  compat_default.rs  compat_strict.rs  compile_fail.rs  completions_drift.rs  export_integration.rs  figfont_parser.rs  filter_integration.rs  filter_scaling.rs  filter_snapshots.rs  harness_smoke.rs  library_api.rs  missing_docs.rs  preset_bundle_integration.rs  sc_coverage_lint.rs  smush_rules.rs  strict_toilet_integration.rs  tlf_bundled_integration.rs  width_precedence.rs
tests/common/: mod.rs
tests/compile_fail/: color_256_without_color_base.rs  color_truecolor_without_color_base.rs  filter_chain_apply_without_any_filter_leaf.rs  output_html_without_cli.rs  output_irc_without_cli.rs  output_svg_without_cli.rs  toilet_strict_compat_without_filters.rs
tests/fixtures/toilet-corpus/: MANIFEST.md
tests/snapshots/upstream_v2_2_5/: PROVENANCE.txt  README.md
tools/: gen-placeholder-tlf.py
tools/feature-lint/: README.md  lint.sh
